mudei o final do paragrafo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p class="Texto-básico texto" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, similique numquam porro recusandae quae sunt deserunt quia vel soluta officia optio in sed nulla a. Molestias dolorem repellat beatae quasi.
     </p>
 
-    <p class="Texto-chamativo texto" class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, soluta. Magnam unde quaerat, harum, quibusdam, autem quasi dignissimos minus tempore asperiores voluptas hic. Ratione fuga esse molestiae et tempore mudei.
+    <p class="Texto-chamativo texto" class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, soluta. Magnam unde quaerat, harum, quibusdam, autem quasi dignissimos minus tempore asperiores voluptas hic. Ratione fuga esse molestiae et tempore mudei de novo. 
     </p>
     
 </body>
